# cloud-pixel-canvas

./: README.md  check-status.sh  docker-compose.portable.yml  docker-compose.yml  push-ecr.sh  run-keycloak-setup.sh  run-setup.sh
backend/: .gitignore  Dockerfile  config.py  main.py  pyproject.toml
backend/src/: config.py  deps.py  main.py  metrics.py  models.py  routes.py  wsmanager.py
backend/src/adapters/: auth.py  db.py  pubsub.py  storage.py
backend/src/routes/: auth.py  canvas.py  static.py
backend/src/services/: canvas.py
backend/src/utils/: auth.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/lib/: auth-stores.ts  global.css  index.ts  palette.ts  stores.ts  utils.ts
frontend/src/routes/: +layout.svelte  +page.svelte
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasources.yml
keycloak/: Dockerfile  realm.json  setup.sh
keycloak/setup/: Dockerfile  setup.sh
minio/setup/: Dockerfile  setup.sh
nginx/: nginx.conf
prometheus/: Dockerfile  entrypoint.sh  prometheus.yml
terraform/: .terraform.lock.hcl  alb.tf  cloudwatch.tf  cognito.tf  dynamodb.tf  ecr.tf  ecs.tf  elasticache.tf  lambda.tf  main.tf  outputs.tf  passwords.tf  s3.tf  vars.tf  vpc.tf
terraform/environments/native/: .terraform.lock.hcl  alb.tf  cognito.tf  ecs.tf  elasticache.tf  main.tf  vars.tf
terraform/environments/portable/: .terraform.lock.hcl  alb.tf  ecr.tf  ecs.tf  efs.tf  main.tf  nlb.tf  outputs.tf  passwords.tf  security.tf  vars.tf
terraform/lambda/: snapshot_scheduler.py
(+16 files in other folders)
