[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "fastapi[standard]>=0.120.4",
    "pillow>=12.0.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.12.3",
    "pymongo>=4.15.3",
    "python-keycloak>=7.0.2",
    "valkey>=6.1.1",
]
